libs/wingc/src/snapshots/VALID_OUTPUT_statements_if.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/valid/statements_if.w"
---
intermediate.js:
const $stdlib = require('@monadahq/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";
const $synthesizer = process.env.WING_SIM ? new $stdlib.sim.Synthesizer({ outdir: $outdir }) : new $stdlib.tfaws.Synthesizer({ outdir: $outdir });
class MyApp extends $stdlib.core.App {
constructor() {
  super({ synthesizer: $synthesizer });
  
  if (true) {
    let x = 2;
  }
}
}
new MyApp().synth();
preflight.js:
const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";

function __app(target) {
	switch (target) {
		case "sim":
			return $stdlib.sim.App;
		case "tfaws":
		case "tf-aws":
			return $stdlib.tfaws.App;
		default:
			throw new Error(`Unknown WING_TARGET value: "${process.env.WING_TARGET ?? ""}"`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir });
  
  if (true) {
    let x = 2;
  }
}
}
new MyApp().synth();

