libs/wingc/src/snapshots/invalid_optional_invoke.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/invalid/optional_invoke.w"
---
[
    Diagnostic {
        message: "Cannot call inflight function \"f\" while in preflight phase",
        span: Some(
            WingSpan {
                start: Point {
                    row: 6,
                    column: 0,
                },
                end: Point {
                    row: 6,
                    column: 4,
                },
                start_byte: 61,
                end_byte: 65,
                file_id: "../../examples/tests/invalid/optional_invoke.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Cannot call inflight function \"f\" while in preflight phase",
        span: Some(
            WingSpan {
                start: Point {
                    row: 7,
                    column: 0,
                },
                end: Point {
                    row: 7,
                    column: 3,
                },
                start_byte: 67,
                end_byte: 70,
                file_id: "../../examples/tests/invalid/optional_invoke.w",
            },
        ),
        level: Error,
    },
]
