libs/wingc/src/snapshots/invalid_types_string_interpolation.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/invalid/types_string_interpolation.w"
---
[
    Diagnostic {
        message: "Expected type \"string\", but got \"number\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 3,
                    column: 11,
                },
                end: Point {
                    row: 3,
                    column: 22,
                },
                start_byte: 60,
                end_byte: 71,
                file_id: "../../examples/tests/invalid/types_string_interpolation.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"string\", but got \"bool\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 6,
                    column: 11,
                },
                end: Point {
                    row: 6,
                    column: 23,
                },
                start_byte: 138,
                end_byte: 150,
                file_id: "../../examples/tests/invalid/types_string_interpolation.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"string\", but got \"number\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 10,
                    column: 11,
                },
                end: Point {
                    row: 10,
                    column: 16,
                },
                start_byte: 219,
                end_byte: 224,
                file_id: "../../examples/tests/invalid/types_string_interpolation.w",
            },
        ),
        level: Error,
    },
]
