libs/wingc/src/snapshots/invalid_types_strings_arithmetic.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/invalid/types_strings_arithmetic.w"
---
[
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 0,
                    column: 15,
                },
                end: Point {
                    row: 0,
                    column: 18,
                },
                start_byte: 15,
                end_byte: 18,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 0,
                    column: 15,
                },
                end: Point {
                    row: 0,
                    column: 18,
                },
                start_byte: 15,
                end_byte: 18,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 0,
                    column: 15,
                },
                end: Point {
                    row: 0,
                    column: 18,
                },
                start_byte: 15,
                end_byte: 18,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 3,
                    column: 13,
                },
                end: Point {
                    row: 3,
                    column: 16,
                },
                start_byte: 85,
                end_byte: 88,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 9,
                    column: 29,
                },
                end: Point {
                    row: 9,
                    column: 40,
                },
                start_byte: 224,
                end_byte: 235,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Expected type \"number\", but got \"string\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 9,
                    column: 29,
                },
                end: Point {
                    row: 9,
                    column: 40,
                },
                start_byte: 224,
                end_byte: 235,
                file_id: "../../examples/tests/invalid/types_strings_arithmetic.w",
            },
        ),
        level: Error,
    },
]
