libs/wingc/src/snapshots/invalid_use_before_defined.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/invalid/use_before_defined.w"
---
[
    Diagnostic {
        message: "Unknown symbol \"y\"",
        span: Some(
            WingSpan {
                start: Point {
                    row: 0,
                    column: 9,
                },
                end: Point {
                    row: 0,
                    column: 10,
                },
                start_byte: 9,
                end_byte: 10,
                file_id: "../../examples/tests/invalid/use_before_defined.w",
            },
        ),
        level: Error,
    },
    Diagnostic {
        message: "Symbol \"x\" used before being defined",
        span: Some(
            WingSpan {
                start: Point {
                    row: 4,
                    column: 11,
                },
                end: Point {
                    row: 4,
                    column: 12,
                },
                start_byte: 83,
                end_byte: 84,
                file_id: "../../examples/tests/invalid/use_before_defined.w",
            },
        ),
        level: Error,
    },
]
