libs/wingc/src/snapshots/valid_expressions_binary_operators.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/valid/expressions_binary_operators.w"
---
// ../../examples/tests/valid/expressions_binary_operators.w.out/preflight.js
const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";

function __app(target) {
	switch (target) {
		case "sim":
			return $stdlib.sim.App;
		case "tfaws":
		case "tf-aws":
			return $stdlib.tfaws.App;
		default:
			throw new Error(`Unknown WING_TARGET value: "${process.env.WING_TARGET ?? ""}"`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir });
  
  let x = 1;
  let y = (2 * x);
  let z = ((x + y) - 1);
  let xyz = (((y * y) / (x * x)) * z);
}
}
new MyApp({ name: "expressions_binary_operators" }).synth();

